실검창 편집

--- a/main.css
+++ b/main.css
@@ -158,3 +158,17 @@ header{
 .middle_container_out{
     background-color:hsl(0, 9%, 91%) ;
 }
+
+/* 실검창 만들어봅시다 */
+.hidden_shiit{
+    display: none;
+    width: 299px;
+    height: 300px;
+    right: 17px;
+    top: 99px;
+    border: solid, white, 1px;
+    border-radius: 6px;
+    background-color: white;
+    z-index: 1000px;
+    position: absolute;
+}
